# rust_diagrams

./: .gitignore  Cargo.toml
.cargo/: config
sem_graph_derive/: Cargo.toml
sem_graph_derive/src/: lib.rs
src/: button.rs  displaytree.rs  hexcolor.rs  interface.rs  lib.rs  main.rs  primitives-.rs  primitives.rs  render_gl.rs  render_text.rs  shape2d.frag  shape2d.vert  textedit.rs  triangle.frag  triangle.vert
src/app/: canvas.rs
src/shaders/: line.geom  line.vert  shape2d.vert  shapecolor.frag  shapecolor.vert  text.frag  text.vert
src/testing/: handle_events.rs  handle_events2.rs
tests/: test_draw.rs
