[package]
name = "sem_graph"
version = "0.1.0"
authors = ["Eric <eric_russo>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.13.0"
nalgebra-glm = "0.4.2"
rand = "0.7.1"

[dependencies.sdl2]
version = "0.32.2"
features = ["bundled", "static-link"]
