[package]
name = "sem_graph_derive"
version = "0.1.0"
authors = ["grapeape38 <Eric.Russo@jmp.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#diagrams = { path = "../" }
#gl = { path = "../" }
nalgebra-glm = "0.4.2"
gl = "0.13.0"
proc-macro2 = "1.0.4"
quote = "1.0.2"
syn = "1.0.5" 

[lib]
proc-macro = true

